--- a/arabic_systems.html
+++ b/arabic_systems.html
@@ -323,7 +323,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                              <h2>ACADEMIC</h2>
+                              <h2>ARABIC</h2>
                               <h2>PLATFORM</h2>
                               <h2>APPLICATIONS</h2>
                         </div>
@@ -337,7 +337,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>ACADEMIC APPLICATIONS</p>
+                                <p>ARABIC APPLICATIONS</p>
                                 <h3>KGSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -353,9 +353,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                        <div class="price">
+                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                    </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -369,7 +369,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>ACADEMIC APPLICATIONS</p>
+                                    <p>ARABIC APPLICATIONS</p>
                                     <h3>PRISS</h3>
                                     <p style="text-align: justify;">
                                         ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -385,9 +385,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                        <div class="price">
+                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                    </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -402,7 +402,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>ACADEMIC APPLICATIONS</p>
+                                <p>ARABIC APPLICATIONS</p>
                                 <h3>PRESS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -418,9 +418,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                        <div class="price">
+                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                    </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -438,7 +438,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>ACADEMIC APPLICATIONS</p>
+                                <p>ARABIC APPLICATIONS</p>
                                 <h3>SECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -454,9 +454,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                        <div class="price">
+                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                    </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -470,7 +470,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>ACADEMIC APPLICATIONS</p>
+                                    <p>ARABIC APPLICATIONS</p>
                                     <h3>KGPRISS</h3>
                                     <p style="text-align: justify;">
                                         ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -486,9 +486,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                        <div class="price">
+                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                    </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -503,7 +503,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>ACADEMIC APPLICATIONS</p>
+                                <p>ARABIC APPLICATIONS</p>
                                 <h3>PRIPRESS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -519,9 +519,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                        <div class="price">
+                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                    </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -539,7 +539,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>ACADEMIC APPLICATIONS</p>
+                                <p>ARABIC APPLICATIONS</p>
                                 <h3>PRESECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -555,9 +555,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                        <div class="price">
+                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                    </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -571,7 +571,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>ACADEMIC APPLICATIONS</p>
+                                    <p>ARABIC APPLICATIONS</p>
                                     <h3>KGPRIPRESS</h3>
                                     <p style="text-align: justify;">
                                         ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -587,9 +587,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                        <div class="price">
+                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                    </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -604,7 +604,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>ACADEMIC APPLICATIONS</p>
+                                <p>ARABIC APPLICATIONS</p>
                                 <h3>PRIPRESECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -620,9 +620,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                        <div class="price">
+                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                    </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -640,7 +640,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>ACADEMIC APPLICATIONS</p>
+                                <p>ARABIC APPLICATIONS</p>
                                 <h3>KGPRIPRESECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -656,9 +656,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                        <div class="price">
+                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                    </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -672,7 +672,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>ACADEMIC APPLICATIONS</p>
+                                    <p>ARABIC APPLICATIONS</p>
                                     <h3>AIS</h3>
                                     <p style="text-align: justify;">
                                         ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -688,9 +688,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                        <div class="price">
+                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                    </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
@@ -705,7 +705,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>ACADEMIC APPLICATIONS</p>
+                                <p>ARABIC APPLICATIONS</p>
                                 <h3>AUS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -721,9 +721,9 @@
                                             </div>
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
-                                        <!-- <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>/mo*</sub></h3>
-                                        </div> -->
+                                        <div class="price">
+                                        <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                    </div>
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
                                 </div>
