--- a/english_systems.html
+++ b/english_systems.html
@@ -68,27 +68,42 @@
                                                         <li><a href="english_home.html">ENGLISH PLATFORM</a></li>
                                                     </ul>
                                                 </li>
-                                                <li><a href="exams.html">EXAMINATIONS</a>
+                                              
+                                                <li><a href="services.html">SERVICES</a>
                                                     <ul class="submenu">
+                                                        <li><a href="services.html">SERVICES APPLICATIONS</a></li>
+                                                        <li><a href="arabic_services.html">ARABIC APPLICATIONS</a></li>
+                                                        <li><a href="english_services.html">ENGLISH APPLICATIONS</a></li>
                                                         <li><a href="exams.html">SERVICES EXAMINATIONS</a></li>
                                                         <li><a href="arabic_exams.html">ARABIC EXAMINATIONS</a></li>
                                                         <li><a href="english_exams.html">ENGLISH EXAMINATIONS</a></li>
                                                     </ul>
                                                 </li>
-                                                <li><a href="services.html">SERVICES</a>
-                                                    <ul class="submenu">
-                                                        <li><a href="services.html">SERVICES SUBSCRIPTIONS</a></li>
-                                                        <li><a href="arabic_services.html">ARABIC SUBSCRIPTIONS</a></li>
-                                                        <li><a href="english_services.html">ENGLISH SUBSCRIPTIONS</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li><a href="products.html">PRODUCTS</a>
+                                                  <li><a href="products.html">PRODUCTS</a>
                                                     <ul class="submenu">
                                                         <li><a href="products.html">PRODUCTS APPLICATIONS</a></li>
                                                         <li><a href="arabic_products.html">ARABIC APPLICATIONS</a></li>
                                                         <li><a href="english_products.html">ENGLISH APPLICATIONS</a></li>
+                                                         <li><a href="products.html">PRODUCTS EXAMINATIONS</a></li>
+                                                        <li><a href="arabic_products.html">ARABIC EXAMINATIONS</a></li>
+                                                        <li><a href="english_products.html">ENGLISH EXAMINATIONS</a></li>
                                                     </ul>
                                                 </li>
+
+                                                <li><a href="institutions.html">INSTITUTIONS</a>
+                                                    <ul class="submenu">
+                                                        <li><a href="schools.html">REGISTERED SCHOOLS</a></li>
+                                                        <li><a href="activated_schools.html">ACTIVATED SCHOOLS</a></li>
+                                                        <li><a href="suspended_schools.html">SUSPENDED SCHOOLS</a></li>
+                                                        <li><a href="institutes.html">REGISTERED INSTITUTES</a></li>
+                                                        <li><a href="activated_institutes.html">ACTIVATED INSTITUTES</a></li>
+                                                        <li><a href="suspended_institutes.html">SUSPENDED INSTITUTES</a></li>
+                                                        <li><a href="universites.html">REGISTERED UNIVERSITIES</a></li>
+                                                        <li><a href="activated_universites.html">ACTIVATED UNIVERSITIES</a></li>
+                                                        <li><a href="suspended_universites.html">SUSPENDED UNIVERSITIES</a></li>
+                                                    </ul>
+                                                </li>
+   
                                                 <li><a href="archives.html">DOWNLOADS</a>
                                                     <ul class="submenu">
                                                         <li><a href="archives.html">ARCHIVES DOWNLOADS</a></li>
@@ -104,7 +119,7 @@
                                                     </ul>
                                                 </li>
                                                 <!-- Button -->
-                                                <li class="button-header"><a href="lognIn.html" class="btn btn3">LOGIN</a></li>
+                                                <li class="button-header"><a href="login.html" class="btn btn3">LOGIN</a></li>
                                             </ul>
                                         </nav>
                                     </div>
